--- a/project/myCrossing/src/app/cat-arte/cat-arte.component.html
+++ b/project/myCrossing/src/app/cat-arte/cat-arte.component.html
@@ -90,11 +90,12 @@
   <div class="grid-w-gap" style="margin: 1vw 0">
       <ng-container *ngFor="let item of listaItems | filtroAc:nameFilter | paginacion:page_number:max_items">
         <div class="grid-item-wrap flex-column-centered" style="justify-content: space-evenly;">
-          <div class="check-container" *ngIf="this._verif.user != null">
-            <button [style.background-image]="this.listaUsuario.includes(item.name.replace(' ','')) ? 'url(../../assets/images/check-rojo.png)' : 'url(../../assets/images/check-gris.png)'" class="boton-imagen editar" (click)="toggleCheck(item)"></button>
+          <div class="check-container">
+            <div *ngIf="this._verif.user != null">
+              <button [style.background-image]="this.listaUsuario.includes(item.name.replace(' ','')) ? 'url(../../assets/images/check-rojo.png)' : 'url(../../assets/images/check-gris.png)'" class="boton-imagen editar" (click)="toggleCheck(item)"></button>
+            </div>
+            <button class="boton-imagen editar left b-falso" [style.background-image]="'url('+urlArteFalso+')'" (click)="verFalsificacion($event, item)" *ngIf="tieneFalsificacion(item)"></button>
           </div>
-          <button class="boton-imagen editar left b-falso" [style.background-image]="'url('+urlArteFalso+')'" (click)="verFalsificacion($event, item)" *ngIf="tieneFalsificacion(item)"></button>
-
           <img [src]="getImage(item, 0)" style="width: 7vw; height: 7vw;" [id]='item.name.replace(" ", "")'>
           <span>{{item.translations.spanish | capitalize}}</span>
         </div>
